--- a/events/index.html
+++ b/events/index.html
@@ -28,6 +28,20 @@
     <h4>Vertical : <span class="vertical">O</span></h4>
   </section>
 
+  <section class="input-event">
+    <label for="question">Comment allez vous ?</label>
+    <br>
+    <input type="text" id="question">
+    <div class="result"></div>
+  </section>
+
+  <section onclick="montrerUnTruc();" class="theme-container">
+    <div class="theme" id="dark"></div>
+    <div class="theme" id="yellow"></div>
+    <div class="theme" id="green"></div>
+  </section>
+
+
   <script src="./index.js"></script>
 </body>
 
