--- a/events/index.html
+++ b/events/index.html
@@ -35,7 +35,7 @@
     <div class="result"></div>
   </section>
 
-  <section onclick="montrerUnTruc();" class="theme-container">
+  <section class="theme-container">
     <div class="theme" id="dark"></div>
     <div class="theme" id="yellow"></div>
     <div class="theme" id="green"></div>
