--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Cours JS</title>
 
   <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-
-  <div id="pic"></div>
-  <p id="quote"></p>
-
 
 
   <script src="./index.js"></script>
