--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
 
 <body>
 
+  <h1>Cours Javascript</h1>
+
+  <button id="btn-1">Bouton 1</button>
+  <button>Bouton 2</button>
+  <br>
+
+  <div class="popup">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, dignissimos!</p>
+    <button id="close">Fermer</button>
+  </div>
+
+  <img src="./bg.jpg" alt="background">
+
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio eius obcaecati mollitia facilis repudiandae soluta,
+    veritatis ipsa quam ipsum minima nihil deleniti expedita, at itaque a animi? Consequuntur illo odit, cum delectus in
+    perspiciatis doloribus. In dolorem magni labore debitis.</p>
 
   <script src="./index.js"></script>
 </body>
