--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <h1>Cours Javascript</h1>
 
   <button id="btn-1">Bouton 1</button>
-  <button>Bouton 2</button>
+  <button id="btn-2">Bouton 2</button>
   <br>
 
   <div class="popup">
@@ -23,7 +23,7 @@
     <button id="close">Fermer</button>
   </div>
 
-  <img src="./bg.jpg" alt="background">
+  <img src="./bg.jpg" alt="background" id="img">
 
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio eius obcaecati mollitia facilis repudiandae soluta,
     veritatis ipsa quam ipsum minima nihil deleniti expedita, at itaque a animi? Consequuntur illo odit, cum delectus in
