--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+  <span class="circle c1"></span>
+  <span class="circle c2"></span>
+  <span class="circle c3"></span>
 
   <h1>Cours Javascript</h1>
 
