--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
   <span class="circle c2"></span>
   <span class="circle c3"></span>
 
+  <nav id="navbar">
+    <h2>Logo</h2>
+    <ul>
+      <li>accueil</li>
+      <li>contact</li>
+      <li>à propos</li>
+    </ul>
+  </nav>
+
   <h1>Cours Javascript</h1>
 
   <button id="btn-1">Bouton 1</button>
