--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
     veritatis ipsa quam ipsum minima nihil deleniti expedita, at itaque a animi? Consequuntur illo odit, cum delectus in
     perspiciatis doloribus. In dolorem magni labore debitis.</p>
 
+  <div class="theme-container">
+    <div class="theme" id="dark"></div>
+    <div class="theme" id="orange"></div>
+    <div class="theme" id="skyblue"></div>
+  </div>
+
   <script src="./index.js"></script>
 </body>
 
