--- a/index.html
+++ b/index.html
@@ -47,6 +47,24 @@
     <div class="theme" id="skyblue"></div>
   </div>
 
+  <form action="">
+    <input type="text" placeholder="Entrez votre nom" id="name">
+    <input type="password" placeholder="Entrez votre mdp" id="password">
+
+    <br>
+    <label for="homme">Homme</label>
+    <input type="radio" name="sexe" id="homme" class="gender">
+
+    <label for="femme">Femme</label>
+    <input type="radio" name="sexe" id="femme" class="gender">
+
+    <br>
+    <label for="cgv">Accepter les CGV</label>
+    <input type="checkbox" id="cgv">
+
+    <input type="submit" value="Valider">
+  </form>
+
   <script src="./index.js"></script>
 </body>
 
