--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <input type="radio" name="sexe" id="homme" class="gender">
 
     <label for="femme">Femme</label>
-    <input type="radio" name="sexe" id="femme" class="gender">
+    <input checked type="radio" name="sexe" id="femme" class="gender">
 
     <br>
     <label for="cgv">Accepter les CGV</label>
@@ -64,6 +64,8 @@
 
     <input type="submit" value="Valider">
   </form>
+
+  <div class="content"></div>
 
   <script src="./index.js"></script>
 </body>
