--- a/countriesApi/index.html
+++ b/countriesApi/index.html
@@ -12,6 +12,10 @@
 
 <body>
 
+  <input type="text" id="search" placeholder="Entrez le nom d'un pays">
+
+  <div class="countries-container"></div>
+
 
   <script src="./index.js"></script>
 </body>
