--- a/1_DOM/index.html
+++ b/1_DOM/index.html
@@ -11,13 +11,18 @@
 
 <body>
 
-  <h1>Cours Javascript</h1>
+  <div class="popup">
+    <h3>Abonnez-vous à notre newsletter !</h3>
+    <button id="popup-btn">Fermer</button>
+  </div>
+
+  <h1 class="title">Cours Javascript</h1>
 
   <button id="btn-1">Bouton 1</button>
   <button id="btn-2">Bouton 2</button>
   <button id="btn-3">Bouton 3</button>
 
-  <img src="./bg.jpg" height="400" alt="">
+  <img src="./bg.jpg" height="200" id="main-img" alt="">
 
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste fuga voluptates facilis magnam culpa! Deleniti iure
     labore officiis, enim eveniet aliquid, exercitationem expedita dolor voluptate, excepturi odit? Odit inventore
