--- a/1_DOM/index.html
+++ b/1_DOM/index.html
@@ -16,13 +16,19 @@
     <button id="popup-btn">Fermer</button>
   </div>
 
+  <div class="theme-container">
+    <div class="theme" id="dark"></div>
+    <div class="theme" id="lime"></div>
+    <div class="theme" id="peru"></div>
+  </div>
+
   <h1 class="title">Cours Javascript</h1>
 
   <button id="btn-1">Bouton 1</button>
   <button id="btn-2">Bouton 2</button>
   <button id="btn-3">Bouton 3</button>
 
-  <img src="./bg.jpg" height="200" id="main-img" alt="">
+  <img src="./bg.jpg" height="20" id="main-img" alt="">
 
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste fuga voluptates facilis magnam culpa! Deleniti iure
     labore officiis, enim eveniet aliquid, exercitationem expedita dolor voluptate, excepturi odit? Odit inventore
