--- a/1_DOM/index.html
+++ b/1_DOM/index.html
@@ -35,6 +35,23 @@
     excepturi accusantium vel! Debitis deleniti temporibus illum harum enim, voluptates non reiciendis quam, ipsam eum
     distinctio fugit. Expedita, nostrum. Temporibus, cum.</p>
 
+  <form action="">
+    <label for="nom">Nom</label>
+    <input type="text" id="nom" required><br>
+    <span class="error"></span><br>
+
+    <label for="man">Homme</label>
+    <input type="radio" name="genre" class="genre" id="man">
+
+    <label for="woman">Femme</label>
+    <input type="radio" name="genre" checked class="genre" id="woman"><br>
+
+    <input type="checkbox" name="" id="cgv">
+    <label for="cgv">Accepter les conditions générales</label><br>
+
+    <input type="submit" value="Valider">
+  </form>
+
 
   <script src="./index.js"></script>
 </body>
