--- a/exo_API/1_jokeAPI/index.html
+++ b/exo_API/1_jokeAPI/index.html
@@ -7,11 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
-  <link rel="stylesheet" href="./index.html">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
 
+  <div class="app"></div>
 
   <script src="./index.js"></script>
 </body>
