--- a/exo_API/2_countriesAPI/index.html
+++ b/exo_API/2_countriesAPI/index.html
@@ -6,15 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-
   <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
 
+  <input type="text" id="inputSearch" placeholder="Rechercher">
+
+
+  <div class="countries-container"></div>
 
   <script src="index.js"></script>
-  <script src="./async.js"></script>
 </body>
 
 </html>
