--- a/exo_APP_API/4_quizApp/index.html
+++ b/exo_APP_API/4_quizApp/index.html
@@ -6,13 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+  <div id="app">
 
+  </div>
 
   <script src="./index.js"></script>
 </body>
