--- a/exo_APP_API/4_quizApp/index.html
+++ b/exo_APP_API/4_quizApp/index.html
@@ -11,8 +11,9 @@
 
 <body>
 
-  <div id="app">
-
+  <div class="app">
+    <div id="quiz"></div>
+    <div id="result"></div>
   </div>
 
   <script src="./index.js"></script>
