--- a/exo_APP_API/3_userApp/index.html
+++ b/exo_APP_API/3_userApp/index.html
@@ -11,6 +11,25 @@
 
 <body>
 
+  <h1>Meet Meat 🥩</h1>
+
+  <!-- 2ème partie -->
+  <div class="search-container">
+    <button id="youngToOld">Age croissant</button>
+    <button id="oldToYoung">Age décroissant</button>
+
+    <div class="genre-container">
+      <input type="checkbox" id="women" checked>
+      <label for="women">Femmes</label>
+
+      <input type="checkbox" id="men" checked>
+      <label for="men">Hommes</label>
+    </div>
+  </div>
+
+  <!-- 1ère partie -->
+  <div id="app"></div>
+
 
   <script src="index.js"></script>
 </body>
