--- a/exo_DATA/4_countdown/index.html
+++ b/exo_DATA/4_countdown/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <h3 class="mb-5">Entrez le nombre de minutes</h3>
+  <h3>Entrez le nombre de minutes</h3>
 
   <form id="form">
     <input type="number" min="1" max="99" size="1" maxlength="2" id="choice">
@@ -19,7 +19,7 @@
   </form>
   </div>
 
-  <div id="countdown"></div>
+  <div id="countdownDisplay"></div>
 
 
   <script src="./index.js"></script>
