--- a/exo_DATA/2_passwordGenerator/index.html
+++ b/exo_DATA/2_passwordGenerator/index.html
@@ -12,10 +12,10 @@
 <body>
 
   <div class="app">
-    <input type="text" id="password-output" value="Générateur de MDP" readonly>
+    <input type="text" id="passwordOutput" value="Générateur de MDP" readonly>
 
     <div class="range-container">
-      <input type="range" id="password-length" min="4" max="24" value="8"
+      <input type="range" id="passwordLength" min="4" max="24" value="8"
         oninput="displayPasswordLength.value=this.value">
       <input type="text" id="displayPasswordLength" value="8" readonly>
     </div>
