--- a/exo_APP_API/3_mealApp/index.html
+++ b/exo_APP_API/3_mealApp/index.html
@@ -14,11 +14,11 @@
 
   <div class="app">
     <form action="">
-      <label for="search">Entrez le nom d'un aliment (en anglais)</label><br>
-      <input type="text" id="search" placeholder="ex : beef">
+      <label for="searchInput">Entrez le nom d'un aliment (en anglais)</label><br>
+      <input type="text" id="searchInput" placeholder="ex : beef">
     </form>
 
-    <ul id="result"></ul>
+    <div id="searchResult"></div>
   </div>
 
   <script src="index.js"></script>
