--- a/1_cours_DOM/index.html
+++ b/1_cours_DOM/index.html
@@ -11,6 +11,11 @@
 
 <body>
 
+  <div class="popup">
+    <h3>Abonnez vous à la Newsletter</h3>
+    <button id="popup-btn">Fermer</button>
+  </div>
+
   <h1>Cours Javascript</h1>
 
   <button id="btn1">Bouton 1</button>
