--- a/1_cours_DOM/index.html
+++ b/1_cours_DOM/index.html
@@ -13,7 +13,7 @@
 
   <div class="popup">
     <h3>Abonnez vous à la Newsletter</h3>
-    <button id="popup-btn">Fermer</button>
+    <button id="popupBtn">Fermer</button>
   </div>
 
   <h1>Cours Javascript</h1>
@@ -23,7 +23,7 @@
   <button class="btn3">Bouton 3</button>
 
   <br><br>
-  <img src="./bg.jpg" height="200" alt="">
+  <img src="./bg.jpg" id="mainImg" height="200" alt="">
 
 
   <script src="./index.js"></script>
