--- a/1_exo_DOM/2_mouse_helium/index.html
+++ b/1_exo_DOM/2_mouse_helium/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-  <span id="cursor" class="mouse"></span>
-  <span id="mouse1" class="mouse"></span>
-  <span id="mouse2" class="mouse"></span>
+  <span id="cursor" class="circles"></span>
+  <span id="mouse1" class="circles"></span>
+  <span id="mouse2" class="circles"></span>
   <nav>
     <h3>Helium</h3>
     <ul>
