--- a/1_cours_DOM/index.html
+++ b/1_cours_DOM/index.html
@@ -25,6 +25,21 @@
   <br><br>
   <img src="./bg.jpg" id="mainImg" height="200" alt="">
 
+  <br><br><br>
+
+  <form action="">
+    <div>
+      <label for="nom">Nom</label>
+      <input type="text" id="nom" required autocomplete="off">
+      <div class="error"></div>
+    </div>
+
+    <input type="checkbox" id="cgv">
+    <label for="cgv">Valider les conditions générales</label><br>
+
+    <input type="submit" value="Valider formulaire">
+  </form>
+
 
   <script src="./index.js"></script>
 </body>
